// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerAccessory with all props should be applied properly with custom text component: PickerAccessory with all props(custom text component ). 1`] = `
<View
  style={
    {
      "backgroundColor": "red",
      "flexDirection": "row",
      "justifyContent": "flex-end",
      "paddingHorizontal": 10,
      "paddingVertical": 8,
    }
  }
  testID="PickerAccessory"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="deleteLink"
  >
    <Text
      style={
        {
          "backgroundColor": "yellow",
          "color": "grey",
        }
      }
      testID="deleteText"
    >
      deleteWithRNEText
    </Text>
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="cancelLink"
  >
    <Text
      style={
        {
          "backgroundColor": "green",
          "color": "black",
        }
      }
      testID="cancelText"
    >
      cancelWithRNEText
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="doneLink"
  >
    <Text
      style={
        {
          "backgroundColor": "aqua",
          "color": "blue",
        }
      }
      testID="doneText"
    >
      doneWithRNEText
    </Text>
  </View>
</View>
`;

exports[`PickerAccessory with all props should be applied properly with default text component: PickerAccessory with all props(default text component ). 1`] = `
<View
  style={
    {
      "backgroundColor": "red",
      "flexDirection": "row",
      "justifyContent": "flex-end",
      "paddingHorizontal": 10,
      "paddingVertical": 8,
    }
  }
  testID="PickerAccessory"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="deleteLink"
  >
    <Text
      style={
        {
          "color": "yellow",
          "fontWeight": "bold",
          "paddingHorizontal": 10,
        }
      }
      testID="deleteText"
    >
      delete
    </Text>
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="cancelLink"
  >
    <Text
      style={
        {
          "color": "green",
          "fontWeight": "bold",
          "paddingHorizontal": 10,
        }
      }
      testID="cancelText"
    >
      cancel
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="doneLink"
  >
    <Text
      style={
        {
          "color": "aqua",
          "fontWeight": "bold",
          "paddingHorizontal": 10,
        }
      }
      testID="doneText"
    >
      done
    </Text>
  </View>
</View>
`;
